--- a/test.html
+++ b/test.html
@@ -28,68 +28,82 @@
     <th>Decimal Value</th>
     </tr>
     <tr>
-      <td> 0</td>
+      <td>0</td>
       <td id="register0bits"></td>
       <td id="register0res"></td>
         </tr>
     <tr>
-    <td> 1</td>
+      <td>1</td>
       <td id="register1bits"></td>
       <td id="register1res"></td>
         </tr>
     <tr>
+      <td>2</td>
       <td id="register2bits"></td>
       <td id="register2res"></td>
         </tr>
     <tr>
+      <td>3</td>
       <td id="register3bits">0000 0000 0000 0000</td>
       <td id="register3res"></td>
         </tr>
     <tr>
+      <td>4</td>
       <td id="register4bits">0000 0000 0000 0000</td>
       <td id="register4res"></td>
         </tr>
     <tr>
+      <td>5</td>
       <td id="register5bits">0000 0000 0000 0000</td>
       <td id="register5res"></td>
         </tr>
     <tr>
+      <td>6</td>
       <td id="register6bits">0000 0000 0000 0000</td>
       <td id="register6res"></td>
         </tr>
     <tr>
+      <td>7</td>
       <td id="register7bits">0000 0000 0000 0000</td>
       <td id="register7res"></td>
         </tr>
     <tr>
+      <td>8</td>
       <td id="register8bits">0000 0000 0000 0000</td>
       <td id="register8res"></td>
         </tr>
     <tr>
+      <td>9</td>
       <td id="register9bits">0000 0000 0000 0000</td>
       <td id="register9res"></td>
         </tr>
     <tr>
+      <td>10</td>
       <td id="register10bits">0000 0000 0000 0000</td>
       <td id="register10res"></td>
         </tr>
     <tr>
+      <td>11</td>
       <td id="register11bits">0000 0000 0000 0000</td>
       <td id="register11res"></td>
         </tr>
     <tr>
+      <td>12</td>
       <td id="register12bits">0000 0000 0000 0000</td>
       <td id="register12res"></td>
         </tr>
     <tr>
+      <td>13</td>
       <td id="register13bits">0000 0000 0000 0000</td>
       <td id="register13res"></td>
         </tr>
     <tr>
+      <td>14</td>
       <td id="register14bits">0000 0000 0000 0000</td>
       <td id="register14res"></td>
         </tr>
     <tr>
+      <td>15</td>
       <td id="register15bits">0000 0000 0000 0000</td>
       <td id="register15res"></td>
         </tr>
@@ -102,71 +116,88 @@
 
       <table>
       <tr>
+        <th>Reg #</td>
         <th>Flags and bits and stuff</th>
         <th>Decimal Value</th>
       </tr>
 
           <tr>
+            <td>0</td>
             <td id="mregister0bits">0000 0000 0000 0000</td>
             <td id="mregister0res"></td>
               </tr>
       <tr>
+        <td>1</td>
         <td id="mregister1bits">0000 0000 0000 0000</td>
         <td id="mregister1res"></td>
           </tr>
       <tr>
+        <td>2</td>
         <td id="mregister2bits">0000 0000 0000 0000</td>
         <td id="mregister2res"></td>
           </tr>
       <tr>
+        <td>3</td>
         <td id="mregister3bits">0000 0000 0000 0000</td>
         <td id="mregister3res"></td>
           </tr>
       <tr>
+        <td>4</td>
         <td id="mregister4bits">0000 0000 0000 0000</td>
         <td id="mregister4res"></td>
           </tr>
       <tr>
+        <td>5</td>
         <td id="mregister5bits">0000 0000 0000 0000</td>
         <td id="mregister5res"></td>
           </tr>
       <tr>
+        <td>6</td>
         <td id="mregister6bits">0000 0000 0000 0000</td>
         <td id="mregister6res"></td>
           </tr>
       <tr>
+        <td>7</td>
         <td id="mregister7bits">0000 0000 0000 0000</td>
         <td id="mregister7res"></td>
           </tr>
       <tr>
+        <td>8</td>
         <td id="mregister8bits">0000 0000 0000 0000</td>
         <td id="mregister8res"></td>
           </tr>
       <tr>
+        <td>9</td>
         <td id="mregister9bits">0000 0000 0000 0000</td>
         <td id="mregister9res"></td>
           </tr>
       <tr>
+        <td>10</td>
         <td id="mregister10bits">0000 0000 0000 0000</td>
         <td id="mregister10res"></td>
           </tr>
       <tr>
+        <td>11</td>
         <td id="mregister11bits">0000 0000 0000 0000</td>
         <td id="mregister11res"></td>
           </tr>
       <tr>
+        <td>12</td>
         <td id="mregister12bits">0000 0000 0000 0000</td>
         <td id="mregister12res"></td>
           </tr>
       <tr>
+        <td>13</td>
         <td id="mregister13bits">0000 0000 0000 0000</td>
         <td id="mregister13res"></td>
           </tr>
       <tr>
+        <td>14</td>
         <td id="mregister14bits">0000 0000 0000 0000</td>
         <td id="mregister14res"></td>
           </tr>
       <tr>
+        <td>15</td>
         <td id="mregister15bits">0000 0000 0000 0000</td>
         <td id="mregister15res"></td>
       </tr>
