--- a/test.html
+++ b/test.html
@@ -208,20 +208,20 @@
     <div class="column right">
             <table>
       <tr>
-        <th>Stack</td>
+        <th>Top of Stack</td>
       </tr>
 
       <tr>
-        <td id="stackbits0"></td>
-      </tr>
-            <tr>
-        <td id="stackbits1"></td>
+        <td id="stackbits3"></td>
       </tr>
             <tr>
         <td id="stackbits2"></td>
       </tr>
             <tr>
-        <td id="stackbits3"></td>
+        <td id="stackbits1"></td>
+      </tr>
+            <tr>
+        <td id="stackbits0"></td>
       </tr>
          
     </table>
