--- a/test.html
+++ b/test.html
@@ -208,20 +208,26 @@
     <div class="column right">
             <table>
       <tr>
-        <th>Top of Stack</td>
+        <th>Stack Information</td>
+        <th>Position</td>
+        
       </tr>
 
       <tr>
         <td id="stackbits3"></td>
+        <td id="stackbits3IND">&laquo;</td>
       </tr>
             <tr>
         <td id="stackbits2"></td>
+        <td id="stackbits2IND">&laquo;</td>      
       </tr>
             <tr>
         <td id="stackbits1"></td>
+        <td id="stackbits1IND">&laquo;</td>
       </tr>
             <tr>
         <td id="stackbits0"></td>
+        <td id="stackbits0IND">&laquo;</td>
       </tr>
          
     </table>
