--- a/test.html
+++ b/test.html
@@ -215,19 +215,19 @@
 
       <tr>
         <td id="stackbits3"></td>
-        <td id="stackbits3IND">&laquo;</td>
+        <td><span id="stackbits3IND">&laquo;</span></td>
       </tr>
             <tr>
         <td id="stackbits2"></td>
-        <td id="stackbits2IND">&laquo;</td>      
+        <td><span id="stackbits2IND">&laquo;</span></td>      
       </tr>
             <tr>
         <td id="stackbits1"></td>
-        <td id="stackbits1IND">&laquo;</td>
+        <td><span id="stackbits1IND">&laquo;</span></td>
       </tr>
             <tr>
         <td id="stackbits0"></td>
-        <td id="stackbits0IND">&laquo;</td>
+        <td><span id="stackbits0IND">&laquo;</span></td>
       </tr>
          
     </table>
