--- a/test.html
+++ b/test.html
@@ -113,7 +113,8 @@
   </div>
 
   <div class="column right">
-
+    <div id="machineDisplay">""</div>
+<!--
       <table>
       <tr>
         <th>Reg #</td>
@@ -231,7 +232,7 @@
       </tr>
          
     </table>
-      
+      -->
       </div>
 
 
