--- a/test.html
+++ b/test.html
@@ -113,7 +113,7 @@
   </div>
 
   <div class="column right">
-    <div id="machineDisplay">""</div>
+    <div id="machineDisplay"></div>
 <!--
       <table>
       <tr>
@@ -245,5 +245,6 @@
 <script src="https://gabesaint.github.io/MSP430-JS/mode/gas/gas.js"></script>
 <link rel="stylesheet" type="text/css" href="https://gabesaint.github.io/MSP430-JS/prettymeup.css">
 <script src="https://gabesaint.github.io/MSP430-JS/processor.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </body>
 </html>
