--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
     <div id="topLevel"></div>
     <textarea id="code" name="code"></textarea>
     <br>
+    <p>Machine Code will be displayed here upon being submitted.</p>
     <div id="machineDisplay"></div>
   </div>
   <div class="column middle">
