--- a/test.html
+++ b/test.html
@@ -114,9 +114,10 @@
 
 
   </div>
-    <div id="programCounterDisplay"></div>
+    
     <div class="column right">
-            <table>
+      <span id="programCounterDisplay"></span>
+    <table>
       <tr>
         <th>Stack Information</td>
         <th>Position</td>
@@ -146,9 +147,9 @@
     
     </table>
     <tr>
-      <td>C Flag</td>
-      <td>N Flag</td>
-      <td>Z Flag</td>
+      <th>C</th>
+      <th>N</th>
+      <th>Z</th>
     </tr>
     <tr>
       <td id="CflagC"></td>
