--- a/test.html
+++ b/test.html
@@ -18,9 +18,10 @@
     <div id="machineDisplay"></div>
   </div>
   <div class="column middle">
-    <button class="buttons" type="button" name="Submit" onclick="submit()">Submit </button><br>
-    <button class="buttons" type="button" name="stepForward" onclick="stepForward()">Step forward</button><br>
-    <button class="buttons" type="button" name="clearRegisters" onclick="clearRegisters()">Clear</button>
+    <button class="buttons" type="button" name="Submit" onclick="submit()">Submit</button><br>
+    <button class="buttons" type="button" name="stepForward" onclick="stepForward()">Step Forward</button><br>
+    <button class="buttons" type="button" name="clearRegisters" onclick="clearRegisters()">Clear</button><br>
+    <button class="buttons" type="button" name="clearEZ" onclick="clearEZ()">Reset</button>
   </div>
   <div class="column right" id="results">
 
