--- a/test.html
+++ b/test.html
@@ -20,8 +20,8 @@
   <div class="column middle">
     <button class="buttons" type="button" name="Submit" onclick="submit()">Submit</button><br>
     <button class="buttons" type="button" name="stepForward" onclick="stepForward()">Step Forward</button><br>
-    <button class="buttons" type="button" name="clearRegisters" onclick="clearRegisters()">Clear</button><br>
-    <button class="buttons" type="button" name="clearEZ" onclick="clearEZ()">Reset</button>
+    <button class="buttons" type="button" name="clearRegisters" onclick="clearRegisters()">Clear All</button><br>
+    <button class="buttons" type="button" name="clearEZ" onclick="clearEZ()">Clear Registers</button>
   </div>
   <div class="column right" id="results">
 
