--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
     <button class="buttons" type="button" name="Submit" onclick="submit()">Submit</button><br>
     <button class="buttons" type="button" name="stepForward" onclick="stepForward()">Step Forward</button><br>
     <button class="buttons" type="button" name="clearRegisters" onclick="clearRegisters()">Clear All</button><br>
-    <button class="buttons" type="button" name="clearEZ" onclick="clearEZ()">Clear Registers</button>
+    <button class="buttons" type="button" name="clearEZ" onclick="clearEZ()">Clear</button>
   </div>
   <div class="column right" id="results">
 
